modify paths in two files

--- a/CafeteriaApp/.htaccess
+++ b/CafeteriaApp/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteBase /
-RewriteRule ^css/(.*\.css) /combine.php?type=css&files=$1
-RewriteRule ^javascript/(.*\.js) /combine.php?type=javascript&files=$1
+RewriteRule ^CafeteriaApp.Frontend/css/(.*\.css) /combine.php?type=css&files=$1
+RewriteRule ^CafeteriaApp.Frontend/javascript/(.*\.js) /combine.php?type=javascript&files=$1
