--- a/CafeteriaApp/CafeteriaApp.Backend/lib/composer.json
+++ b/CafeteriaApp/CafeteriaApp.Backend/lib/composer.json
@@ -1,9 +1,9 @@
 {
 	
     "require": {
-        "paypal/rest-api-sdk-php": "*",
         "phpmailer/phpmailer": "^6.0",
         "abeautifulsite/simple-php-captcha": "^1.0",
-        "facebook/graph-sdk": "^5.6"
+        "facebook/graph-sdk": "^5.6",
+        "paypal/rest-api-sdk-php": "^1.13"
     }
 }
